[package]
name = "latex-proxy"
version = "0.1.0"
authors = ["Daniel Leinfelder <daniel@smart-lgt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
#tokio = { version = "0.2", features = ["full"] }
walkdir = "2"
clap = "2.33.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1